# DM_Midi_Soundboard

./: README.md  akai_apc_mini_controller_config_gen.py  controller_config.py  controller_config.yaml  controller_config_schema.json  controller_manager.py  list_midi_code.py  main.py  main.spec  overview.html.template  pyproject.toml  sound_config.py  sound_config_process.py  sound_config_schema.json  sound_manager.py  ui_manager.py
